text alignment fixed

--- a/src/styles/GamesListContainer.css
+++ b/src/styles/GamesListContainer.css
@@ -136,8 +136,9 @@
 
   p {
     text-align: center;
-    margin-top: 50%;
-    /* padding-top: 20px; */
+    margin-top: 40%;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   
   .games-list-item:hover .game-list-overlay {
